syntax = "proto3";
option java_multiple_files = true;
option java_package = "vn.com.ironman.proto";

service SimpleService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
